Feature/914 update about us (#917)
* clarat-org/clarat#914 - added new pictures and texts for about-us page

* removed german text placeholders in all locales except english

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1034,30 +1034,49 @@ ru:
     about:
       amina: "Амина - социолог. Она много знает об обществе. Она быстро замечает самое важное. В clarat она работает в команде сбора информации. Она решает, как именно будет clarat помогать. Ее любимая песня - La Prima Estate Эрленда Ойа (Erlend Oye)."
       andrea: "Андреа изучала международный менеджмент. Она многое знает об экономике и культуре. Она работает очень точно. В clarat она работает в команде сбора информации. Она следит за качеством работы нашей команды. Ее любимая песня Work Me Блэк киз (The Black Keys)."
+      anja: 
+      anna: 
       anne: "Анне изучала экономику и международные отношения. Она может очень быстро думать логически. Она главная в clarat. Она заботится о всей команде и все организует. Ее любимая песня Denken Sie Groß группы Дайхкинд (Deichkind) из Гамбурга."
       astrid: "Астрид политолог Она знает много о политике и обществе. У нее всегда отличное настроение и этим она заражает всех вокруг. В clarat она работает в команде сбора информации. Ее любимая песня You Got Me от Рутс и Эрика Баду (The Roots feat. Erykah Badu)."
       basti: "Басти интернет-разработчик. Он хорошо умеет программировать интернет страницы. В clarat он шеф по информационным технологиям. А так же он занимается нашими отпусками и договорами. Его любимая песня Man In The Mirror  Майкла Джексона (Michael Jackson)."
       bettina: "Беттина изучала управление в некоммерческой деятельности. Она знает как организовать помощь и следит за порядком.  В clarat она работает в команде сбора информации и ищет в интернете подходящие организации, с которым будет работать clarat. Ее любимая песня - Elias группы Диспэтч (Dispatch)."
+      birte: 
+      chrissy: 
+      claudia: 
+      eleonore: 
       elisa: "Элиза - культуролог. Она многое знает о культуре. Она может сложное объяснить простыми словами. В clarat она работает в команде сбора информации. Еще она заботится о текстах  и пользователях нашего сайта. Ее любимая песня - Boat Behind группы Кингс оф конвиниенс (Kings of Convenience)."
+      esther: 
       franziska: "Франциска - международный юрист. Она многое знает о законах, которые действительны для всех стран. Она быстро понимает сложные вещи и находит решения. В clarat она работает в команде сбора информации. Ее любимая песня - Explanations певицы из Бельгии Села Сью (Selah Sue)"
       heading: "Что подразумевает clarat"
+      jacinta: 
+      jakob: 
       janina: "Янина изучала этнологию культуры. Это значит, что она многое знает о культурах и людях. Она очень хорошо пишет. В clarat она работает в команде сбора информации. Ее любимая песня - MFG группы Fanta4."
       janne: "Янне изучала политику и международные отношения. Она очень хорошо распределяет свое время. В clarat она работает в команде сбора информации. Ее любимая песня - Sweat австралийского исполнителя Ry X."
+      jenny: 
       jens: |2-
 
         Енс Научный работник по воспитанию. Это значит, что он хорошо разбирается в воспитании. Он быстро понимает сложные вопросы. В clarat он работает в команде сбора информации и решает какие предложения относятся к clarat. Его любимая песня (2В2) от группы Лэмбчоп (Lambchop).
       jule: "Юле Исследовательница мира и конфликтов. Это значит, что она много знает о конфликтах и войне. Она хорошо умеет разрешать проблемы. В clarat она работает в команде сбора информации и следит за качеством нашей работы. Её любимая песня Home от исполнителя Эдварда Шарпа (Edward Sharpe)."
       julia: "Юлия Германист. Это значит, что она хорошо разбирается в текстах и в немецком языке. Она может хорошо писать у понятно объяснять вещи. В clarat она работает в команде сбора информации и является экспертом по языку clarat. Её любимая песня Reckoner от группы  Рэдиохэд (Radiohead)."
       julian: "Юлиан Социальный экономист. Это значит, что он знает много о экономике и обществе. Он хорошо разбирается в компьютерах. В clarat он работает в команде сбора информации и занимается техническими вопросами. Его любимая песня All You Need от Сублим (Sublime)."
+      juliane: 
+      karo: 
       katinka: "Катинка Психолог. Это значит что она хорошо понимает поведение и чувства людей. Она может быстро разбираться в сложных вопросах. В clarat она работает в команде сбора информации. Её любимая песня  The Greatest от Кэт Пауэр (Cat Power)."
+      katja: 
       konstantin: "Константин Интернет-разработчик. Это значит, что он умеет программировать страницы в интернете. Он всегда хорошо разрешает проблемы. В clarat он работает в команде технической инвентаризации. Его любимая песня Too Long от  французской группы Дафт Панк (Daft Punk). "
-      laura: "Лаура Изучала науки южной Азии и научные исследования географического развития. Это значит, что она много знает о развивающихся странах. Она всегда имеет полный обзор. В clarat она работает в команде сбора информации. Её любимая песня Paint it Black от Роллинг Стонс (Rolling Stones)."
+      laura_i: 
+      laura_w: "Лаура Изучала науки южной Азии и научные исследования географического развития. Это значит, что она много знает о развивающихся странах. Она всегда имеет полный обзор. В clarat она работает в команде сбора информации. Её любимая песня Paint it Black от Роллинг Стонс (Rolling Stones)."
       lavinia: "Лавиния Исследователь мира и конфликтов. Это значит, что она много знает о конфликтах и войне. Она может хорошо убеждать людей в новых идеях. В clarat она работает в команде сбора информации и сортирует предложения помощи по темам. Её любимая песня I'm Not Donе от Фивер Рэй (Fever Ray)."
       line: "Лине Театральный режиссёр. Она хорошо разбирается в литературе и языке. Поэтому он знает как слова влияют на людей. В clarat она работает в команде сбора информации. Её любимая песня Anybody Seen My Baby от Роллинг Стонс (Rolling Stones)."
       lisa: "Лиза Дизайн мыслительница (Design Thinker). Это значит, что она может планировать креативные "
       marcus: "Маркус Дизайнер по интернету. Это значит, что он умеет программировать и составлять сайты в интернете. Он тоже хорошо умеет планировать. В clarat он работает в команде технической информации. Он заботится о том, чтобы наш сайт в интернете хорошо выглядел. Его любимая песня Hysteria от группы Мьюз (Muse)."
+      michaela: 
+      nahla: 
+      nathalie: 
       nicole: "Николь Изучала межкультурную коммуникацию. Это значит, что она знает много о разных культурах и языках. Она хорошо может принимать решения. В clarat она работает в команде сбора информации. Её любимая песня Palabra Mi Amor от Шака Понк (Shaka Ponk)."
       nils: "Нильс Специалист по информатике. Это значит, что он хорошо умеет программировать компьютерные программы и сайты в интернете. Он хорошо решает проблемы и быстро осваивает новые вещи. В clarat он работает команде технической информации. Его любимая песня Jein от группы Фэттэс Брот (Fettes Brot)."
+      philipp: 
+      sabine: 
       stefan: "Штефан Специалист по науке культуры. Это значит, что он знает много о культуре и обществе. Он хорошо умеет увлекать людей. Он создал clarat. Его любимая песня Riders in The Storm от Де Доорс (The Doors)."
       text: 'clarat это проект некоммерческого фонда Benckiser Stiftung Zukunft (фонд Бенкизер, Будущее) - www.benckiser-stiftung.org. Вместе с этим фондом уже несколько лет мы содействуем в продвижении проектов для детей и молодежи. При этом мы снова и снова обращали внимание на одну вещь: довольно тяжело найти какие возможности поддержки и помощи в целом существуют и трудно в них разобраться. Тогда мы поняли, что если для нас, "экспертов" тяжело найти и понять это, то каково детям, молодежи, семьям, которым действительно нужна помощь? Либо беженцам, которые здесь, в Германии еще вовсе не освоились? На это есть один ответ: очень сложно! Так и родилась идея создать clarat: возможность легко найти помощь. Для семей - в clarat family и для беженцев - в clarat refugee.'
       tine: "Тине Социальный педагог. Она может хорошо слушать людей. Она также писатель. Это значит что она хорошо владеет языком и красиво умеет писать истории. В clarat она работает в команде научного сбора информации. Её любимая песня Survive от Гостпоэт (Ghostpoet)."
@@ -1227,9 +1246,12 @@ ru:
     definitions: "формулировки"
     emails: "электронные-письма"
     faq: "Частые-вопросы"
+    fr: 
     haeufige-fragen: "Частые-вопросы"
     home: 
     impressum: "Импрессум"
+    liste: 
+    liste-de-services: 
     new: "новый"
     offers: "предложения"
     organizations: "орагнизации"
@@ -1242,7 +1264,6 @@ ru:
     unsubscribe: unsubscribe
     update_requests: "обновить-запросы"
     users: "пользователь"
-    liste: 
   shareds:
     forms:
       fill_field: "Пожалуйста, заполни это поле"
