for #922 - sort orgas alphabetically

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1687,7 +1687,7 @@ de:
     haeufige-fragen: haeufige-fragen
     home: home
     impressum: impressum
-    liste: 
+    liste: liste
     liste-de-services: liste-de-services
     new: new
     offers: angebote
