for #836 - implement contact type switch

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -642,6 +642,8 @@ ar:
         category_query: 
         default: 
       show_personal: "عرض عروض مكانية أكثر"
+      personal_anchor: 
+      remote_anchor: 
     shared:
       current_and_original_locale:
         "'150'": "لغة الإشارة الألمانية"
