--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -738,6 +738,8 @@ fr:
         category_query: 
         default: 
       show_personal: Montre les services locaux
+      personal_anchor: 
+      remote_anchor: 
     shared:
       current_and_original_locale:
         "'150'": Langue des signes allemande
