--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -785,6 +785,8 @@ pl:
         category_query: 
         default: 
       show_personal: Pokaż oferty lokalne
+      personal_anchor: 
+      remote_anchor: 
     shared:
       current_and_original_locale:
         "'150'": Niemiecki język migowy
