fix for #918 - load chat after search results and cache category json

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -989,6 +989,10 @@ de:
         wol: Wol
         zho: Zho
         zza: Zza
+        bam: Bam
+        dyu: Dyu
+        man: Man
+        slv: Slv
       section:
         family: Family
         refugees: Refugees
