--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -562,6 +562,7 @@ fr:
         amh: Amh
         ara: Ara
         aze: Aze
+        bam: Bam
         ban: Ban
         bel: Bel
         ben: Ben
@@ -571,6 +572,7 @@ fr:
         cpe: Cpe
         cze: Cze
         deu: Deu
+        dyu: Dyu
         ell: Ell
         eng: Eng
         ewo: Ewo
@@ -591,6 +593,7 @@ fr:
         lit: Lit
         ltz: Ltz
         luo: Luo
+        man: Man
         mkd: Mkd
         mul: Mul
         nor: Nor
@@ -602,6 +605,7 @@ fr:
         rus: Rus
         skr: Skr
         slo: Slo
+        slv: Slv
         snk: Snk
         som: Som
         spa: Spa
@@ -694,12 +698,16 @@ fr:
         approach: De quelle Manière?
         gender: Sexe
         language: Langue
+        sort: 
         target_audience: De l'aide pour qui?
       option_any: "égal"
       pagination:
         back: Retour
         gap: "..."
         next: de nouveau
+      sort:
+        nearby: 
+        relevance: 
     search_results:
       bridge: pour le terme de recherche
       enclosing: trouvé
@@ -715,6 +723,7 @@ fr:
       more: d'autres services par téléphone ou en ligne
       off_canvas:
         result_text: Show %{result_count} results
+      personal_anchor: 
       personal_offers:
         one: un service sur place
         other: "%{count} services sur place"
@@ -724,6 +733,7 @@ fr:
         category: 
         category_query: 
         default: 
+      remote_anchor: 
       remote_offers:
         one: Une assistance téléphonique ou un service en ligne
         other: "%{count} Assistances téléphoniques ou services en ligne"
@@ -747,6 +757,7 @@ fr:
         amh: Amharique - አማርኛ
         ara: Arabe - عربي
         aze: Azéri - Azərbaycan
+        bam: bambara - bamanankan
         ban: Balinais - Basa Bali
         bel: Biélorusse - беларуская мова
         ben: Bengali - বাংলা
@@ -756,6 +767,7 @@ fr:
         cpe: Pidgin camerounais - Pidgin
         cze: Tchèque - čeština
         deu: Allemand - Deutsch
+        dyu: dioula - julakan
         ell: Grec - ελληνικά
         eng: Anglais - English
         ewo: Ewondo / kóló - Ewondo
@@ -776,6 +788,7 @@ fr:
         lit: Lituanien - lietuvių
         ltz: Luxembourgeois - Lëtzebuergesch
         luo: Luo - Dholuo
+        man: Maninka - Maninka
         mkd: Macédonien - македонски
         mul: autres langues sur demande
         nor: Norvégien - Norsk
@@ -787,6 +800,7 @@ fr:
         rus: Russe - русский
         skr: Serbo-croate - српскохрватски / hrvatskosrpski
         slo: Slovaque - slovenský jazyk
+        slv: slovène - slovenščina
         snk: Soninké - Soninkanxaane
         som: Somali - Soomaali
         spa: Espagnol - español
@@ -868,6 +882,15 @@ fr:
           family: Offres d'aide pour les enfants, les ados et les familles
           main: Trouver simplement de l'aide
           refugees: Offres d'aide pour les réfugiés
+      top_bar:
+        languages:
+          ar: 
+          de: 
+          en: 
+          fr: 
+          pl: 
+          ru: 
+          tr: 
   offers:
     index:
       filters:
