--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -607,6 +607,7 @@ pl:
         amh: Amh
         ara: Ara
         aze: Aze
+        bam: Bam
         ban: Ban
         bel: Bel
         ben: Ben
@@ -616,6 +617,7 @@ pl:
         cpe: Cpe
         cze: Cze
         deu: Deu
+        dyu: Dyu
         ell: Ell
         eng: Eng
         ewo: Ewo
@@ -636,6 +638,7 @@ pl:
         lit: Lit
         ltz: Ltz
         luo: Luo
+        man: Man
         mkd: Mkd
         mul: Mul
         nor: Nor
@@ -647,6 +650,7 @@ pl:
         rus: Rus
         skr: Skr
         slo: Slo
+        slv: Slv
         snk: Snk
         som: Som
         spa: Spa
@@ -739,12 +743,16 @@ pl:
         approach: W jaki sposób?
         gender: Płeć
         language: Język
+        sort: 
         target_audience: Pomoc dla kogo?
       option_any: obojętne
       pagination:
         back: Wróć
         gap: "..."
         next: Dalej
+      sort:
+        nearby: 
+        relevance: 
     search_results:
       bridge: dla zapytania
       enclosing: znaleziono
@@ -760,6 +768,7 @@ pl:
       more: Inne oferty telefoniczne i online
       off_canvas:
         result_text: Show %{result_count} results
+      personal_anchor: 
       personal_offers:
         few: "%{count} ofert na miejscu"
         one: Jedna oferta na miejscu
@@ -770,6 +779,7 @@ pl:
         category: 
         category_query: 
         default: 
+      remote_anchor: 
       remote_offers:
         few: "%{count} porad telefonicznych i ofert online"
         one: Jedna porada telefoniczna lub oferta online
@@ -794,6 +804,7 @@ pl:
         amh: Język amharski - አማርኛ
         ara: Język arabski - عربي
         aze: Język azerski - Azərbaycan
+        bam: Język bambara - Bamanankan
         ban: Język balijski - Basa Bali
         bel: Język białoruski - беларуская мова
         ben: Język bengalski - বাংলা
@@ -803,6 +814,7 @@ pl:
         cpe: Język kamtok - Pidgin
         cze: Język czeski - čeština
         deu: Język niemiecki - Deutsch
+        dyu: Język diula - julakan
         ell: Język grecki - ελληνικά
         eng: Język angielski - English
         ewo: Język yaunde - Ewondo
@@ -823,6 +835,7 @@ pl:
         lit: Język litewski - lietuvių
         ltz: Język luksemburski - Lëtzebuergesch
         luo: Język luo - Dholuo
+        man: Maninka - Maninka
         mkd: Język macedoński - македонски
         mul: inne języki na życzenie
         nor: Język norweski - Norsk
@@ -834,6 +847,7 @@ pl:
         rus: Język rosyjski - русский
         skr: Język serbsko-chorwacki - српскохрватски / hrvatskosrpski
         slo: Język słowacki - slovenský jazyk
+        slv: Język słoweński - Slovenščina
         snk: Język soninke - Soninkanxaane
         som: Język somalijski - Soomaali
         spa: Język hiszpański - español
@@ -914,6 +928,15 @@ pl:
           family: Oferty wsparcia dla dzieci, młodzieży i rodzin
           main: Proste szukanie pomocy
           refugees: Oferty wsparcia dla uchodźców
+      top_bar:
+        languages:
+          ar: 
+          de: 
+          en: 
+          fr: 
+          pl: 
+          ru: 
+          tr: 
   offers:
     index:
       filters:
